--- a/random.html
+++ b/random.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Random</title>
+	<title>Random Page</title>
 </head>
 <body>
 	<header>
@@ -16,19 +16,20 @@
 			<ul>
 				<li><a href="index.html">About Me</a></li>
 				<li><a href="family.html">My Family</a></li>
-				<li class="active"><a href="random.html" aria-current="page" >Random Stuff</a></li>
+				<li class="active"><a href="random.html" aria-current="page">Random Stuff</a></li>
 				<li><a href="https://si.umich.edu" target="_blank" rel="noopener noreferrer">UMSI</a></li>
 			</ul>
 		</nav>
-		<h1>Random Page</h1>
+		<h1>Random Stuff</h1>
 	</header>
 	<main>
-		<h2>Explore More Resources</h2>
-
-		<p>Make sure you are doing the readings from the <a href="https://www.w3schools.com/html/" target="_blank" rel="noopener noreferrer">W3 Schools HTML tutorial</a> as well as the readings from Shay Howe's <a href="https://learn.shayhowe.com/html-css/" target="_blank" rel="noopener noreferrer">HTML and CSS tutorial</a>.</p>
-		
-		<p>Using the Piazza site is another great way to stay on top of your classwork.</p>
-		
+		<h2>Useful Resources</h2>
+		<p>If you're learning HTML and CSS, here are some recommended readings:</p>
+		<ul>
+			<li><a href="https://www.w3schools.com/html/" target="_blank" rel="noopener noreferrer">W3 Schools HTML Tutorial</a> - A beginner-friendly guide to web development.</li>
+			<li><a href="https://learn.shayhowe.com/html-css/" target="_blank" rel="noopener noreferrer">Shay Howe's HTML and CSS Tutorial</a> - A comprehensive resource for intermediate learners.</li>
+			<li><a href="https://piazza.com" target="_blank" rel="noopener noreferrer">Piazza</a> - A platform for managing coursework and staying connected with peers.</li>
+		</ul>
 	</main>
 
 	<footer>
