--- a/random.html
+++ b/random.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Random Page</title>
+	<title>Random</title>
 </head>
 <body>
 	<header>
