--- a/random.html
+++ b/random.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Random</title>
+	<title>Random Page</title>
 </head>
 <body>
 	<header>
@@ -20,10 +20,9 @@
 				<li><a href="https://si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
-		<h1>Colleen van Lent</h1>
+		<h1>Random Page</h1>
 	</header>
 	<main>
-		<h2>Random Page</h2>
 
 		<p>Make sure you are doing the readings from the 
 			<a href="https://www.w3schools.com/html/">W3 Schools HTML tutorial</a> 
